# replit-trading-bot

./: .gitignore  .replit  Instructions.md  ML_Operations_Manual.md  README.md  advanced_conflict_scanner.py  all_strategies_orphan_ghost_test_20250727_154631.json  all_strategies_test_results_20250724_141911.json  all_strategies_test_results_20250724_142401.json  anomaly_manager.py  auto_commit.py  babel.config.js  backtest_system.py  build_js.py  check_ada_position_legitimacy.py  check_current_positions.py  check_current_trade_margin.py  check_database_data_integrity.py  check_database_status.py  check_database_sync_status.py  check_git_sync.py  check_indicator_accuracy.py  check_indicator_data_sufficiency.py  check_latest_trade_data.py  check_ml_comprehensive.py  check_ml_status.py  check_option1_status.py  check_rsi_accuracy.py  check_sol_trade_records.py  check_strategy_colors.py  check_vpn_status.py  check_xrp_stop_loss_config.py  clean_database_fresh_start.py  cleanup_processes.py  clear_ghost_anomalies.py  clear_open_trades.py  clear_orphan.py  complete_reset.py  comprehensive_fix_verification.json  comprehensive_strategy_websocket_validation.py  (+191 more)
attached_assets/: Pasted--Go-to-file-t-Name-author-ghaisosman-Checkpoint-before-assistant-change-Add-screenshot-to-clarify-1752832464047_1752832464047.txt  Pasted--INFO-19-20-17--1752607277707_1752607277708.txt  Pasted--MARKET-ASSESSMENT-INFO--1752607426716_1752607426717.txt  Pasted--python-from-flask-import-Flask-render-template-jsonify-request-from-trading-bot-bot-import--1752585161650_1752585161651.txt  Pasted--python-from-flask-import-Flask-render-template-jsonify-request-from-trading-bot-bot-import-1752582786357_1752582786358.txt  Pasted--python-from-flask-import-Flask-render-template-jsonify-request-from-trading-bot-bot-import-1752583174878_1752583174879.txt  anomaly_detector_1752768197403.py  balance_fetcher_1752769418765.py  bot_manager_1752768022676.py  (+21 more)
src/: __init__.py  (+1 more)
(+74 files in other folders)
