[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "flask>=3.1.1",
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tensorflow>=2.14.0",
    "xgboost>=3.0.2",
]
