[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cursorbot"
version = "1.0.0"
description = "Multi-Strategy Cryptocurrency Trading Bot"
authors = [{name = "CursorBot Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "websocket-client>=1.6.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ccxt>=4.1.0",
    "ta>=0.10.0",
    "python-telegram-bot>=20.7",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
